testcases/valid/val9.prove
\exists[a][b][c]:[d]
