testcases/invalid/inv1.prove
[a][b]:[c][a][false]
